2003-08-29  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DesGraph.py: Change from TextDoc and DrawDoc to BaseDoc.
	* src/plugins/FanChart.py: Likewise. Enable Book item functionality. 
	* src/plugins/TimeLine.py: Likewise.

2003-08-28  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LaTeXDoc.py: Do not register as a book format (have to
	support both text and graphics).
	* src/plugins/AncestorChart.py:  Minor code cleanup. 
	* src/plugins/BookReport.py: Add context menus to the dialog. 
	* src/FamilyView.py: Properly refer to gtk stock items. 
	* src/gramps_main.py: Likewise. 
	* src/plugins/DesGraph.py: Enable Book item functionality.

2003-08-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: don't add columns to family view items
	if they have already be added.

2003-08-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: reinitialize interface after preferences
	has been clicked.

2003-08-26  Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Bring up to date.
	* TODO: Likewise. 

2003-08-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Minor cleanups for the alternate family view. 
	* src/gramps_main.py: Likewise.

2003-08-25  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: move alternate family view tab, assign a
	few object names
	* src/FamlyView.py: handle alternate family view
	* src/preferences.glade: allow user to choose family view
	* src/GrampsCfg.py: allow user to choose family view
	* src/gramps_main.py: allow user to choose family view

2003-08-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add Alternative Family View tab. 
	* src/PedView.py (PedigreeView.__init__): Add parent argument to the
	constructor. Connect to the handling function on button press over the
	canvas to enable context menu; 
	(on_canvas_press, build_nav_menu): Add functions to enable context menu.